# video2x-qt6

./: .gitmodules  CMakeLists.txt  README.md
src/: mainwindow.cpp  preferencesdialog.cpp  preferencesdialog.ui  taskconfigdialog.cpp  translations.qrc  video2x-qt6_de_DE.ts  video2x-qt6_fr_FR.ts  video2x-qt6_ja_JP.ts  video2x-qt6_pt_PT.ts  video2x-qt6_uk_UA.ts  video2x-qt6_zh_CN.ts
